[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Control.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Rowdies.tres" type="DynamicFont" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.145098, 0.145098, 0.145098, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.196078, 0.196078, 0.196078, 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="."]
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = 935.0
margin_bottom = -50.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 1 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 2 )
text = "L"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -935.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_fonts/font = ExtResource( 2 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
text = "R"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Left" to="." method="_on_Left_button_down"]
[connection signal="button_up" from="Left" to="." method="_on_Left_button_up"]
[connection signal="button_down" from="Right" to="." method="_on_Right_button_down"]
[connection signal="button_up" from="Right" to="." method="_on_Right_button_up"]
